--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,7 @@
   }
 
   .marker {
-    width: 160px;
+    width: 200px;
     position: relative;
     left: -50%;
     top: calc(-100% - 38px);
@@ -26,6 +26,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    filter: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1))
+      drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
   }
 
   .marker:after {
